Fix footer divider gap

--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -103,4 +103,6 @@
 
 .footline {
 	height: 20vw;
+	margin-left: 4vw;
+	margin-right: 4vw;
 }
